# iluminaty

./: .gitignore  ANALISIS-ILUMINATY.docx  AUDITORIA CODEX.md  BENCHMARKS-IPA-v2.1.md  BUGFIX-ROADMAP.md  CLAUDE.md  CODE-AUDIT-REPORT.md  CONTRIBUTING.md  IPA-v2.md  LICENSE  PHASE4-5-PLAN.md  PLANUPDATE.md  README.md  ROADMAP.md  STRESS-REPORT-IPA-v2.1.md  VISION.md  create_shortcut.ps1  diag_auto.py  diag_mcp.py  iluminaty_config.json  install.bat  ipa_benchmark_report.json  launcher.py  main.py  pyproject.toml  run_mcp.bat  run_mcp.cmd  run_mcp.py  skills-lock.json  start.bat  start.ps1  start_all.bat  start_brain.bat  start_dev.bat  start_vlm.bat
.claude/rules/: auditoria-exhaustiva-2026-04-17.md
.github/workflows/: tests.yml
api/: schema.sql  worker.js  wrangler.toml
benchmarks/: BENCHMARK-RESULTS.md  benchmark_vs_computer_use.py  results.json
core/: __init__.py  mcp_server.py  security.py  server.py  vision.py
desktop-app/: package-lock.json
desktop-app/src/: index.html  main.js  splash-eye.js  styles.css
desktop-app/src-tauri/: Cargo.toml  tauri.conf.json
desktop-app/src-tauri/icons/: icon.icns
desktop-app/src-tauri/src/: lib.rs  main.rs
domain_packs/: tradingview.toml.example  vscode.toml.example
iluminaty/: __init__.py  action_watchers.py  actions.py  adapters.py  adapters.py.deleted  agents.py  app_behavior_cache.py  audio.py  audit.py  autonomy.py  brain_chat.py  brain_engine.py  brain_server.py  brain_trainer.py  browser.py  capture.py  clipboard.py  collab.py.deleted  context.py  cursor_tracker.py  dashboard.py  domain_packs.py  fast_ocr.py  filesystem.py  fusion.py  fusion.py.deleted  git_ops.py  grounding.py  host_telemetry.py  intent.py  ipa_bridge.py  licensing.py  llm_loop.py  main.py  mcp_server.py  memory.py  monitors.py  multi_capture.py  ocr_worker.py  os_surface.py  (+32 more)
iluminaty-app/: .gitignore  package-lock.json  package.json
iluminaty-app/src/: index.html
iluminaty-app/src-tauri/: Cargo.toml  tauri.conf.json
iluminaty-app/src-tauri/capabilities/: default.json
iluminaty-app/src-tauri/src/: lib.rs
iluminaty/plugins/: __init__.py
iluminaty/routes/: __init__.py  actions.py  agent.py  annotations.py  audio.py  clipboard.py  files.py  grounding.py  ipa.py  monitors.py  os_surface.py  perception.py  process.py  safety.py  system.py  tokens.py  trading.py  ui.py  watch.py  watchdog.py  windows.py  workers.py
iluminaty/static/: viewer.html
iluminaty/trading/: __init__.py  alerts.py  config.py  engine.py  exchange.py  models.py  risk.py  signals.py  state.py  strategy_base.py  visual_reader.py
iluminaty/trading/strategies/: __init__.py  bollinger_bounce.py  ema_crossover.py  rsi_divergence.py
ipa/: ENCODER.md  __init__.py  benchmark.py  benchmark_real.py  compressor.py  demo_app.py  demo_realtime.py  encoder.py  engine.py  pyproject.toml  stream.py  types.py
ipa/tests/: test_compressor.py  test_engine.py  test_stream.py
scripts/: hf_upload.py  remove_endpoints.py  restart_server.ps1
sdks/: generate_openapi.py
sdks/node/: README.md  package.json  tsconfig.json
sdks/node/src/: index.ts
sdks/python/: README.md  pyproject.toml
sdks/python/iluminaty_client/: __init__.py
tests/: benchmark_ipa_v21.py  benchmark_vlm_resources.py  stress_ipa_v21_release_gate.py  test_action_watchers.py  test_agent_tool_contract.py  test_app_behavior_cache.py  test_audio_interrupt_detector.py  test_capture_callback_monitor_consistency.py  test_cursor_tracker.py  test_domain_packs.py  test_grounding_engine.py  test_integration_live.py  test_license_mcp_sync.py  test_main_monitor_mode_selection.py  test_mcp_server_auth.py  test_mcp_workers_tools.py.deleted  test_monitors_active_fallback.py  test_perception_cpu_throttle.py  test_perception_deep_loop_focus.py  test_perception_stream_v21.py  test_server_audio_interrupt.py  test_server_behavior_cache.py  test_server_domain_packs.py  test_server_grounding.py  test_server_monitor_strictness.py  test_server_native_ocr_mapping.py  test_server_perception_query.py  test_server_precheck.py  test_server_runtime_phase_a.py  test_server_runtime_profile.py  test_server_stability.py  test_server_workers_endpoints.py  test_server_workers_scheduler_endpoints.py  test_trading_core.py  test_ui_semantics.py  test_vision_region_zoom.py  test_visual_engine_runtime_device.py  test_visual_engine_vlm_scheduler.py  test_watch_memory_integration.py  test_windows_title_ranking.py  (+3 more)
website/: dashboard.html  eye.js  index.html  main.js  style.css
