[build-system]
requires = ["setuptools>=68.0", "wheel"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "iluminaty"
version = "0.3.0"
description = "Real-time visual perception for AI. Zero-disk, RAM-only."
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.10"
authors = [
    {name = "Godo", email = "101007677+sgodoy90@users.noreply.github.com"},
]
keywords = ["ai", "vision", "screen-capture", "ocr", "mcp", "real-time"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Programming Language :: Python :: 3.13",
    "Programming Language :: Python :: 3.14",
    "Topic :: Software Development :: Libraries",
    "Topic :: Multimedia :: Graphics :: Capture :: Screen Capture",
]

dependencies = [
    "mss>=10.0",
    "Pillow>=10.0",
    "fastapi>=0.100",
    "uvicorn>=0.20",
    "websockets>=12.0",
    "numpy>=1.21",
    "psutil>=5.9",
]

[project.optional-dependencies]
ocr = [
    "rapidocr>=3.0",
    "onnxruntime>=1.15",
    "opencv-python>=4.5",
    # Tip: replace opencv-python with opencv-python-headless to save ~40MB disk space:
    #   pip install opencv-python-headless  (no GUI dependencies)
]
vlm = [
    "torch>=2.3",
    "transformers>=4.46",
    "accelerate>=0.33",
    "sentencepiece>=0.2",
]
trading = [
    "ccxt>=4.0",
]
all = [
    "iluminaty[ocr]",
    "iluminaty[vlm]",
    "iluminaty[trading]",
]

[project.scripts]
iluminaty = "iluminaty.main:main"

[project.urls]
Homepage = "https://github.com/sgodoy90/iluminaty"
Repository = "https://github.com/sgodoy90/iluminaty"
Issues = "https://github.com/sgodoy90/iluminaty/issues"

[tool.setuptools.packages.find]
include = ["iluminaty", "iluminaty.*"]

[tool.pytest.ini_options]
testpaths = ["tests", "ipa/tests"]
addopts = [
    "-q",
    "--ignore=tests/test_perception_deep_loop_focus.py",
    "--ignore=tests/test_server_precheck.py",
    "--ignore=tests/test_server_stability.py",
    "--ignore=tests/test_watch_memory_integration.py",
]
