[package]
name = "iluminaty-app"
version = "0.1.0"
description = "ILUMINATY - Real-time visual perception for AI"
authors = ["Godo"]
edition = "2021"

[lib]
name = "iluminaty_app_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
tauri-plugin-shell = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"

