[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "iluminaty-client"
version = "0.1.0"
description = "Python client SDK for ILUMINATY - real-time visual perception for AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Godo"}]
keywords = ["iluminaty", "ai", "vision", "screen-capture", "sdk"]
dependencies = []

[project.urls]
Homepage = "https://github.com/sgodoy90/iluminaty"

[tool.setuptools.packages.find]
include = ["iluminaty_client"]
