[build-system]
requires = ["setuptools>=68.0"]
build-backend = "setuptools.backends._legacy:_Backend"

[project]
name = "iluminaty-client"
version = "0.3.0"
description = "Python client SDK for ILUMINATY - real-time visual perception for AI"
readme = "README.md"
license = {text = "MIT"}
requires-python = ">=3.8"
authors = [{name = "Godo", email = "101007677+sgodoy90@users.noreply.github.com"}]
keywords = ["iluminaty", "ai", "vision", "screen-capture", "mcp", "sdk", "ocr"]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.8",
    "Programming Language :: Python :: 3.9",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
dependencies = []  # zero dependencies — stdlib only

[project.urls]
Homepage = "https://github.com/sgodoy90/iluminaty"

[tool.setuptools.packages.find]
include = ["iluminaty_client"]
